--- a/3362815204/localisation/new_policies_l_english.yml
+++ b/3362815204/localisation/new_policies_l_english.yml
@@ -119,7 +119,7 @@
   economic_serpentspine:0 "Surface holds pride"
   economic_legionary:0 "Silk market of bulwar"
   economic_general_staff:0 "economic_general_staff" #
-  economic_standing_army:0 "Follow an online formation it's cheeper and faster they say"
+  economic_standing_army:0 "Follow an online formation it's cheeper and faster"
   economic_heroism:0 "economic_heroism" #
   economic_conscription:0 "economic_conscription" #
   economic_weapon_quality:0 "Produce more with low space"
@@ -203,7 +203,7 @@
   administrative_strategic:0 "administrative_strategic" #
   administrative_serpentspine:0 "administrative_serpentspine" #
   administrative_legionary:0 "administrative_legionary" #
-  administrative_general_staff:0 "administrative_general_staff" #
+  administrative_general_staff:0 "General de papier"
   administrative_standing_army:0 "administrative_standing_army" #
   administrative_heroism:0 "Individual contracts"
   administrative_conscription:0 "administrative_conscription" #
@@ -237,7 +237,7 @@
   tolerance_artificery:0 "Cohexistance Act"
   tolerance_war_production:0 "Guns for All, DEI quota"
   tolerance_shock:0 "Nous ne faisons qu'un avec les poney! Sus..."
-  tolerance_fire:0 "Burning with Acceptance. Wait, they claim to be tolerant but use the methods of those they criticize"
+  tolerance_fire:0 "They claim to be tolerant but use methods they criticize"
   tolerance_offensive:0 "Tolerance Through Superior Firepower"
   tolerance_defensive:0 "Defend minority (eww)"
   tolerance_quality:0 "Equally exceptional"
@@ -279,7 +279,7 @@
   religious_empire_of_anbennar:0 "religious_empire_of_anbennar" #
   religious_artificery:0 "Canon of Lavalette"
   religious_war_production:0 "Orgue canon, Forged by Faith"
-  religious_shock:0 "A man with an horse is physicaly but also spiritually more powerful than an footmen"
+  religious_shock:0 "Horsy boy is physically and spiritually better than an footmen"
   religious_fire:0 "Cleansing Flames"
   religious_offensive:0 "religious_offensive" #
   religious_defensive:0 "Defend our country againts those herticts"
@@ -742,7 +742,7 @@ decentralism_militarism:0 "Lige man"
   infrastructure_standing_army:0 "Construct outpost on trading roads"
   infrastructure_heroism:0 "Guardians of the Roads"
   infrastructure_conscription:0 "make them work for the country"
-  infrastructure_weapon_quality:0 "Infrastructure of quality (Lame name HAHA)"
+  infrastructure_weapon_quality:0 "Infrastructure of quality"
   infrastructure_forteress:0 "Vauban System"
   infrastructure_militarism:0 "Military workforce"
 
@@ -842,7 +842,7 @@ trade_legionary:0 "The golden highway of bulwar shine over the world"
 trade_general_staff:0 "Arms dealer ready for duty"
 trade_standing_army:0 "trade_standing_army"
 trade_heroism:0 "Guardians of Trade wink wnik"
-trade_conscription:0 "trade_conscription"
+trade_conscription:0 "Flood the market with dropshippers"
 trade_weapon_quality:0 "Beter primary materials quality"
 trade_forteress:0 "Well defended inland trade route"
 trade_militarism:0 "trade_militarism"
@@ -883,7 +883,7 @@ maritime_legionary:0 "Follow the radiant fleet"
 maritime_general_staff:0 "maritime_general_staff"
 maritime_standing_army:0 "Sweedish wet dream Bigger boat!"
 maritime_heroism:0 "Our bravery will be renown"
-maritime_conscription:0 "maritime_conscription"
+maritime_conscription:0 "The massive wooden wall"
 maritime_weapon_quality:0 "I'm sure we can force more cannon in it"
 maritime_forteress:0 "Well constructed but easy to destroy"
 maritime_militarism:0 "Caution magician onboard"
@@ -944,7 +944,7 @@ society_legionary:0 "The Silken golden highway Society"
 society_general_staff:0 "The dilling for everyone!"
 society_standing_army:0 "Society of Tradition"
 society_heroism:0 "Symbols of Virtue"
-society_conscription:0 "society_conscription"
+society_conscription:0 "Everyone in the familly serve the empire"
 society_weapon_quality:0 "worker state"
 society_forteress:0 "society_forteress"
 society_militarism:0 "society_militarism"
@@ -1045,7 +1045,7 @@ amphibious_legionary:0 "amphibious_legionary"
 amphibious_general_staff:0 "We must land faster!"
 amphibious_standing_army:0 "Better trained Marines"
 amphibious_heroism:0 "Yaaaarrrh an other one to our collection boys"
-amphibious_conscription:0 "amphibious_conscription"
+amphibious_conscription:0 "More marines ready to serve"
 amphibious_weapon_quality:0 "Better Equipment for marines"
 amphibious_forteress:0 "amphibious_forteress"
 amphibious_militarism:0 "amphibious_militarism"
