patch anbennar du 18

--- a/3362815204/localisation/Flavour_Amacimst_G26_l_english.yml
+++ b/3362815204/localisation/Flavour_Amacimst_G26_l_english.yml
@@ -134,7 +134,7 @@
  flavour_amacimst.51.a:0 "Of Course, and we shall win!"
  flavour_amacimst.51.b:0 "No, I don't think I will"
  
- flavour_amacimst.52.t:0 "The Jousters Assemble"
+ flavour_amacimst.52.title:0 "The Jousters Assemble"
  flavour_amacimst.52.d1:0 "We have summoned all respectable Lords to attend our joust, now we must decide who among them to challenge"
  flavour_amacimst.52.d2:0 "It is now the Second round, bonuses have become better and we are ready to challenge another foe"
  flavour_amacimst.52.d3:0 "It is now the Third round, bonuses have become better and we are ready to challenge another foe"
