--- a/3362815204/localisation/Flavour_MireMaw_J32_l_english.yml
+++ b/3362815204/localisation/Flavour_MireMaw_J32_l_english.yml
@@ -113,7 +113,7 @@
 
   #Events, written by Lexperiments
 
-  flavor_miremaw.1.t:0 "The Ghavarmegh Runestone"
+  flavor_miremaw.1.t:0 "The Ghavamregh Runestone"
   flavor_miremaw.1.d:0 "Over two thousand years ago, the soldiers of Kranmas the Frost Giant entered the Serpent’s Vale. As heralds of our ancestors who had returned to the world, Kranmas’s giants demanded our submission: and we were grateful to comply. There was no greater honor than working for the giants.\n\nUnder their lead, we built towers to the heavens. We crafted fortresses, roads, and homes fit for giants. We lorded over the other Giantkin, and all the lands they controlled: and we did so not just as ogres, but as Ghavamregh, the “Eastern Realm.” The giants had chosen us to be their favorites.\n\nThe representation of our old power now decays before us. The Ghavamregh Runestone, once as tall as twenty ogres, lies overgrown and forgotten in the depths of the swamp. The Giant Rune of “RULE,” carved relentlessly into every side of it in spiraling fractals, is barely visible under moss and lichen.\n\nIn the years since the fall of Kranmas, our tribes and clans have warred for the Runestone. We saturated the swamps with blood, all fighting for control over the dying kingdom. We ate our power, and each other, and hollowed ourselves out until we were nothing. The Runestone was eventually abandoned, and left to rot, for it was so coated in the blood of ogres that none dared to claim it. We must restore it if we are to remake Ghavamregh anew.\n\nWe will not make the same mistakes. We will unite the ogres, and all Giantkin, against our enemies. We shall feast: but we shall feast on our enemies more than we feast on ourselves."
   flavor_miremaw.1.a:0 "We must remember that we are the kin of giants!"
 
@@ -285,8 +285,8 @@
   miremaw_ogrish_metallurgy:0 "Ogrish Metallurgy"
   desc_miremaw_ogrish_metallurgy:0 "With plentiful resources we have been able to bring about advancements in smithing."
 
-  miremaw_greater_ghavarmegh:0 "Greater Ghavarmegh"
-  desc_miremaw_greater_ghavarmegh:0 "We have done what none have before us, and created a true ogre empire. The weak bow before our might!"
+  miremaw_greater_ghavamregh:0 "Greater Ghavamregh"
+  desc_miremaw_greater_ghavamregh:0 "We have done what none have before us, and created a true ogre empire. The weak bow before our might!"
 
   miremaw_pipe_agriculture:0 "Pipe-Powered Agriculture"
   desc_miremaw_pipe_agriculture:0 "This area has had its agricultural yield boosted by goblin-rigged piping systems."
