--- a/3362815204/localisation/seasonal_courts_l_english.yml
+++ b/3362815204/localisation/seasonal_courts_l_english.yml
@@ -207,7 +207,7 @@
  seasonal_embassy_alreadydone:0 "Unifier of Eordand"
  seasonal_embassy_happykidsangryparents:0 "Faerie dragon babysitters"
  seasonal_embassy_boredfaeriedragons:0 "Bored faerie dragons"
- seasonal_embassy_hagsdeal:0 "Negociated with the Hags"
+ seasonal_embassy_hagsdeal:0 "Negotiated with the Hags"
  seasonal_embassy_hagsimp:0 "Kowtowed to the Hags"
  
  merc_eordand_storm_elemental:0 "Summoned Storm Cloud Elementals"
