--- a/3362815204/localisation/Flavour_Magharma_I90_l_english.yml
+++ b/3362815204/localisation/Flavour_Magharma_I90_l_english.yml
@@ -488,7 +488,7 @@ maghargma_consolidate_the_riverlands_tt:0 "We will consolidate every §YIthagamr
 maghargma_ordering_the_steppes_tt:0 "We will consolidate every §YIthagamregh§! that has their capital in the §YEast Forbidden Plains§! region into one, provinces owned by them that are not part of the region will be ceded to us"
 I90_reunification_tt:0 "Every province owned by us or our subjects in the §YNomsyulhan§! region will receive the following:"
 maghargma_the_eastern_edge_tt:0 "Every province in the §YNuzurbokh§! region that is producing metal will receive:"
-maghargma_sieze_the_swamps_tt:0 "Every province in the §Serpent Vale§! region that is owned by us or our subjects will gain the following effect:"
+maghargma_sieze_the_swamps_tt:0 "Every province in the §YSerpent Vale§! region that is owned by us or our subjects will change into §YMossmouth Ogre§!"
 
 #Estate & Reforms & Etc
 estate_mages_collaborators:0 "Mage Collaborators"
