--- a/3362815204/localisation/Flavour_Rosande_Z35_l_english.yml
+++ b/3362815204/localisation/Flavour_Rosande_Z35_l_english.yml
@@ -332,7 +332,7 @@
  #Custom tooltips
  rosande_sour_taste_tt:0 "Has opinion modifiers §YImproved Relations§! with a value of §G+100§! and §YSent Gift§! with a value of §G+25§!"
  rosande_slave_hunters.tt:0 "We will gain access to a §Ydecision§! that allows us to §Genslave§! the §Rorcish population§!, making them a part of our workforce, and granting the province the §GOrcish Workforce§! modifier. \nThe §GOrcish Workforce§! modifier gives: \n §G+0.75 Local goods produced§! \n§R+3 Local unrest§!"
- rosande_rattling_chains.tt:0 "An §GOrcish workfofce§! will be established in a province fulfilling the requirements, granting it §G+0.75§! Goods produced, §R+3§! unrest and a §Rlarge orcish minority§! \nThe province's trade good will also be converted to §Gwine§!"
+ rosande_rattling_chains.tt:0 "An §GOrcish Workforce§! will be established in a province fulfilling the requirements, granting it §G+0.75§! Goods produced, §R+3§! Unrest and a §RLarge Orcish minority§! \nThe province's trade good will also be converted to §Gwine§!"
  rosande_grape_corvee.tt:0 "Every §Y5§! years, we can choose to utilize a portion of our nobility's slaves for our own uses, granting us a §GConstruction Cost Reduction§! while §Rangering§! our Nobility."
  rosande_crimson_forge.tt:0 "If we have completed at least §G1§! idea in the §YAristocratic idea group§!, the §Y‘Knights Rósande’§! country modifier will be renewed!"
  rosande_ambush.tt:0 "The Orcs of the Deepwoods will desperately try to halt our advance, periodically §Rspawning rebels§! in provinces with an §GOrcish population§!!"
@@ -340,7 +340,7 @@
  bal_dostan_bypass.tt:0 "We will be able to construct Bal Dostan, ignoring all requirements."
  rosande_lose_orcs.tt:0 "Due to death toll of the rebellion, §R6§! provinces without a workforce containing an §Rorcish minority§! will lose said minority."
  rosande_shimmering_gem.tt:0 "Any known Dwarven country has opinion modifier §YImproved Relations§! with a value of §G+100§! and §YSent Gift§! with a value of §G+25§!"
- rosande_4_orc.tt:0 "§G4§! random provinces will gain an §Gorcish minority§!"
+ rosande_4_orc.tt:0 "§G4§! random provinces will gain an §ROrcish minority§!"
  rosande_those_who_escaped.tt:0 "We will begin periodically §Gtransferring the orcish population§! of the deepwoods to Escann."
  rosande_knights_steed.tt:0 "§Y10§! owned provinces in the Western Castanor region are part of a §YHoly Order§ \n"
  rosande_halforc_revolt.tt:0 "Many §Yhalf-Orcs§! will join the uprising in their last stand, spawning §Radditional rebels§!"
@@ -355,7 +355,7 @@
  rosande_harsh_control.tt:0 "The §YOrcish Workforce§! modifier is §Gupgraded§! to the §Y Grand Orcish Workforce§! modifier, granting an additional: \n§G+0.25 Local goods produced§! \n§G+5% Production effeciency§! \nThis affects all §Ycurrent§! and §Yfuture§! plantations"
  rosande_knights_steed.tt.2:0 "Every owned province in the §YTaran Plains area§! gains §G1§! £icon_production_in_text£ and §G1§! £icon_manpower_in_text£"
  rosande_above_flames.tt:0 "The §YSupermacy over the Crown§! nobility privilege no longer reduces §GMaximum Absolutism§!"
- rosande_overflowing.tt:0 "Every owned province currently producing §Rslaves§! will have its trade good changed to §Gwine§! and gets an §GOrcish Workforce§!"
+ rosande_overflowing.tt:0 "Every owned province currently producing §RSlaves§! will have its trade good changed to §Gwine§! and gets an §GOrcish Workforce§!"
  rosande_plantation.tt:0 "Any owned province with an §ROrcish minority§! or §Rmajority§! has §Y10 regiments§! present. This does §RNOT§! include provinces in a state which already has an §GOrcish Workforce§!"
  rosande_plantation.tt.2:0 "The Orcs are obedient"
  rosande_decision.tt.3:0 "If the province has an §ROrcish majority§!, its §Gculture§! and §Greligion§! will be converted to ours at the cost of §R5§! regiments"
@@ -367,7 +367,7 @@
  rosande_4_ic.tt:0 "§Y5§! owned provinces will be converted to §YInfernal Court§!"
  rosande_hide_out_of_woods.tt:0 "§YThis event will be hidden from now on. This decision is§! §Rpermanen§t!"
  rosande_unprofitable_trade.tt:0 "An event regarding the §Yslave trade§! has fired."
- rosande_magic_feast_tt:0 "You must have cast a Magnificent Feast spell of medium strength or higher from either Ruler or Estate magic"
+ rosande_magic_feast_tt:0 "You must have cast a Magnificent Feast spell of medium strength or higher from the Mages Estate"
  rosande_population_tt.1:0 "§YIn order to make progress, we require 25 provinces with an Orcish population in Castanor!§!"
  rosande_population_tt.2:0 "§YIn order to make progress, we require 35 provinces with an Orcish population in Castanor!§!"
  rosande_population_tt.3:0 "§YIn order to make progress, we require 50 provinces with an Orcish population in Castanor!§!"
@@ -376,3 +376,5 @@
  rosande_knights_steed.tt.3:0 "If we have fully completed the §YAristocratic idea group§!, we will renew the §G‘Knights Rósande’§! country modifier permanently!"
  rosande_golden_age.tt:0 "We will begin a Golden Age! If we have already had a Golden Age, we will enter a new one! If we are currently in a Golden Age, we will extend it!"
  rosande_those_who_escaped.tt:0 "Every state within the grove has the highest level of §YFort§! possible with the current level of technology"
+ rosande_ball.tt:0 "§YThe slaves grow weary of their masters' absence§!"
+ rosande_grandest_winery.tt:0 "§GWe can now upgrade the Grand Baazar in South Castonath early!§!"
