Update monuments haless and aelantir 11-01-2025

--- a/3362815204/localisation/haless_and_aelantir_monuments_l_english.yml
+++ b/3362815204/localisation/haless_and_aelantir_monuments_l_english.yml
@@ -12,7 +12,7 @@ halessi_monuments_can_use_tooltip_citadel_of_the_dawn: "§Y[Root.GetName]§! is 
 halessi_monuments_can_use_tooltip_thidnkai: "§Y[Root.GetName]§! is either §YKai§!, §YYan§!, §YWuhyun§!, §YGoldscale Kobold§!, or §YFeng Harpy§!"
 halessi_monuments_can_use_tooltip_odheongu: "§Y[Root.GetName]§! is either §YOdheongun§!, §YYan§!, §YWuhyun§!, §YGoldscale Kobold§!, or §YFeng Harpy§!"
 halessi_monuments_can_use_tooltip_hubao_the_tiger_fortress: "§Y[Root.GetName]§! is either §YHorned Ogre§!, §YYan§!, §YHarimari§!, §YWuhyun§!, §YGoldscale Kobold§!, or §YFeng Harpy§!"
-halessi_monuments_can_use_tooltip_azjakuma: "§Y[Root.GetName]§! is either §YHorned Ogre§! or follows the §YLefthand Path§!"
+halessi_monuments_can_use_tooltip_azjakuma: "§Y[Root.GetName]§! is either §YHorned Ogre§! or follows the §YDevouring Path§!"
 halessi_monuments_can_use_tooltip_bomdan: "§Y[Root.GetName]§! is either §YBom§!, §YYan§!, §YHarimari§!, §YWuhyun§!, §YGoldscale Kobold§!, or §YFeng Harpy§!"
 halessi_monuments_can_use_tooltip_ynn: "§Y[Root.GetName]§! is either §YYnnic§!, §YElven§!, or §YYnnsman§!"
 halessi_monuments_can_use_tooltip_taychendi: "§Y[Root.GetName]§! is either §YTaychendi§! or §YElven§!"
@@ -188,7 +188,7 @@ gundhaghidur_library_of_insight_desc: "The Library of Gundhaghidur is the greate
 aoshan_hanging_temple_title: "Hanging Temple of Aoshan"
 aoshan_hanging_temple: "Hanging Temple of Aoshan"
 great_project_aoshan_hanging_temple: "Hanging Temple of Aoshan"
-aoshan_hanging_temple_desc: "The Hanging Temple of Aoshan is one of the great wonders of Haless, being carven straight into the eastern face of the mountain. The temple serves as the home of the School of Open Sky and hosts thousands of pilgrims of the Righteous Path from throughout Haless."
+aoshan_hanging_temple_desc: "The Hanging Temple of Aoshan is one of the great wonders of Haless, being carven straight into the eastern face of the mountain. The temple serves as the home of the School of Open Sky and hosts thousands of pilgrims of the Accretive Path from throughout Haless."
 
 ####################
 #Yanshen Coast
