Update Cannornian monuments

--- a/3362815204/localisation/cannorian_monuments_l_english.yml
+++ b/3362815204/localisation/cannorian_monuments_l_english.yml
@@ -23,7 +23,7 @@ cannorian_monuments_can_use_tooltip_sorcerer_king_throne: "§Y[Root.GetName]§! 
 cannorian_monuments_can_use_tooltip_lencenor: "§Y[Root.GetName]§! is either a §YLencori§! culture or is §YMoon Elf§!"
 cannorian_monuments_can_use_tooltip_north_salahad: "§Y[Root.GetName]§! is either a culture native to §YNorth Salahad§! or is §YSun Elf§!"
 cannorian_monuments_can_use_tooltip_pyramids_of_khet: "§Y[Root.GetName]§! is either a culture native to §YNorth Salahad§!, is §YSun Elf§!, or the owner is the §YSteward of the Sorrow§!"
-cannorian_monuments_can_use_tooltip_aquatbar_library: "§Y[Root.GetName]§! is either §YBulwari§!, §YElven§!, §YExodus Goblin§!, §YKarashari§!, §YGnollish§!, or §YHarpy§!"
+cannorian_monuments_can_use_tooltip_aquatbar_library: "§Y[Root.GetName]§! is either §YBulwari§!, §YElven§!, §YExodus Goblin§!, §YKarashari§!, §YOurdi§, §YGnollish§!, or §YHarpy§!"
 cannorian_monuments_can_use_tooltip_halls_of_reverence: "§Y[Root.GetName]§! is either §YBulwari§! or follows the §YOld Sun Cult§Y"
 
 WITCH_KING_REQUIREMENT: "Ruler is a Witch-King" #For the Throne of the Sorceror-King in #833 (North Castonath)
