--- a/3362815204/localisation/1me_text_l_english.yml
+++ b/3362815204/localisation/1me_text_l_english.yml
@@ -20,3 +20,278 @@ custom_institution_growth_event.1.b:0 "Invest resources in the growth of the loc
 custom_institution_growth_event.1.c:0 "I'm a chad, I will develop the institution myself."
 institution_growth_boost_modifier:0 "Intitution growth boost"
 institution_growth_boost_modifier2:0 "Intitution growth boost 2"
+
+
+advisor_flags_info_title:0 "Advisor Events Status"
+advisor_flags_info_desc:0 "This option displays which advisor events have been triggered in your country."
+ 
+ # Base text for description
+ advisor_flags_info_desc_intro:0 "§YTriggered Advisor Events:§!\n\n"
+ 
+ # Each flag with its condition
+ advisor_flags_info_desc:0 "$advisor_flags_info_desc_intro$[Root.advisor_flags_philosopher][Root.advisor_flags_natural_scientist][Root.advisor_flags_army_reformer][Root.advisor_flags_naval_reformer][Root.advisor_flags_artist][Root.advisor_flags_treasurer][Root.advisor_flags_theologian][Root.advisor_flags_statesman][Root.advisor_flags_colonial_governor][Root.advisor_flags_spymaster][Root.advisor_flags_diplomat][Root.advisor_flags_trader][Root.advisor_flags_master_of_mint][Root.advisor_flags_navigator][Root.advisor_flags_grand_captain][Root.advisor_flags_army_organiser][Root.advisor_flags_commandant][Root.advisor_flags_quartermaster][Root.advisor_flags_recruitmaster][Root.advisor_flags_fortification_expert][Root.advisor_flags_inquisitor][Root.advisor_flags_radical_mercantilist_reforms]"
+
+ # Conditional texts for each flag
+ # Philosopher
+ advisor_flags_philosopher_yes:0 "§G- Philosopher: ACTIVE§!\n"
+ advisor_flags_philosopher_no:0 "§R- Philosopher: INACTIVE§!\n"
+ advisor_flags_philosopher:0 "[Root.has_philosopher]"
+ has_philosopher:0 {
+   trigger = { has_country_flag = philosopher }
+   text = advisor_flags_philosopher_yes
+ }
+ has_philosopher:0 {
+   text = advisor_flags_philosopher_no
+ }
+ 
+ # Natural Scientist
+ advisor_flags_natural_scientist_yes:0 "§G- Natural Scientist: ACTIVE§!\n"
+ advisor_flags_natural_scientist_no:0 "§R- Natural Scientist: INACTIVE§!\n"
+ advisor_flags_natural_scientist:0 "[Root.has_natural_scientist]"
+ has_natural_scientist:0 {
+   trigger = { has_country_flag = natural_scientist }
+   text = advisor_flags_natural_scientist_yes
+ }
+ has_natural_scientist:0 {
+   text = advisor_flags_natural_scientist_no
+ }
+ 
+ # Army Reformer
+ advisor_flags_army_reformer_yes:0 "§G- Army Reformer: ACTIVE§!\n"
+ advisor_flags_army_reformer_no:0 "§R- Army Reformer: INACTIVE§!\n"
+ advisor_flags_army_reformer:0 "[Root.has_army_reformer]"
+ has_army_reformer:0 {
+   trigger = { has_country_flag = army_reformer }
+   text = advisor_flags_army_reformer_yes
+ }
+ has_army_reformer:0 {
+   text = advisor_flags_army_reformer_no
+ }
+ 
+ # Naval Reformer
+ advisor_flags_naval_reformer_yes:0 "§G- Naval Reformer: ACTIVE§!\n"
+ advisor_flags_naval_reformer_no:0 "§R- Naval Reformer: INACTIVE§!\n"
+ advisor_flags_naval_reformer:0 "[Root.has_naval_reformer]"
+ has_naval_reformer:0 {
+   trigger = { has_country_flag = naval_reformer }
+   text = advisor_flags_naval_reformer_yes
+ }
+ has_naval_reformer:0 {
+   text = advisor_flags_naval_reformer_no
+ }
+ 
+ # Artist
+ advisor_flags_artist_yes:0 "§G- Artist: ACTIVE§!\n"
+ advisor_flags_artist_no:0 "§R- Artist: INACTIVE§!\n"
+ advisor_flags_artist:0 "[Root.has_artist]"
+ has_artist:0 {
+   trigger = { has_country_flag = artist }
+   text = advisor_flags_artist_yes
+ }
+ has_artist:0 {
+   text = advisor_flags_artist_no
+ }
+ 
+ # Treasurer
+ advisor_flags_treasurer_yes:0 "§G- Treasurer: ACTIVE§!\n"
+ advisor_flags_treasurer_no:0 "§R- Treasurer: INACTIVE§!\n"
+ advisor_flags_treasurer:0 "[Root.has_treasurer]"
+ has_treasurer:0 {
+   trigger = { has_country_flag = treasurer }
+   text = advisor_flags_treasurer_yes
+ }
+ has_treasurer:0 {
+   text = advisor_flags_treasurer_no
+ }
+ 
+ # Theologian
+ advisor_flags_theologian_yes:0 "§G- Theologian: ACTIVE§!\n"
+ advisor_flags_theologian_no:0 "§R- Theologian: INACTIVE§!\n"
+ advisor_flags_theologian:0 "[Root.has_theologian]"
+ has_theologian:0 {
+   trigger = { has_country_flag = theologian }
+   text = advisor_flags_theologian_yes
+ }
+ has_theologian:0 {
+   text = advisor_flags_theologian_no
+ }
+ 
+ # Statesman
+ advisor_flags_statesman_yes:0 "§G- Statesman: ACTIVE§!\n"
+ advisor_flags_statesman_no:0 "§R- Statesman: INACTIVE§!\n"
+ advisor_flags_statesman:0 "[Root.has_statesman]"
+ has_statesman:0 {
+   trigger = { has_country_flag = statesman }
+   text = advisor_flags_statesman_yes
+ }
+ has_statesman:0 {
+   text = advisor_flags_statesman_no
+ }
+ 
+ # Colonial Governor
+ advisor_flags_colonial_governor_yes:0 "§G- Colonial Governor: ACTIVE§!\n"
+ advisor_flags_colonial_governor_no:0 "§R- Colonial Governor: INACTIVE§!\n"
+ advisor_flags_colonial_governor:0 "[Root.has_colonial_governor]"
+ has_colonial_governor:0 {
+   trigger = { has_country_flag = colonial_governor }
+   text = advisor_flags_colonial_governor_yes
+ }
+ has_colonial_governor:0 {
+   text = advisor_flags_colonial_governor_no
+ }
+ 
+ # Spymaster
+ advisor_flags_spymaster_yes:0 "§G- Spymaster: ACTIVE§!\n"
+ advisor_flags_spymaster_no:0 "§R- Spymaster: INACTIVE§!\n"
+ advisor_flags_spymaster:0 "[Root.has_spymaster]"
+ has_spymaster:0 {
+   trigger = { has_country_flag = spymaster }
+   text = advisor_flags_spymaster_yes
+ }
+ has_spymaster:0 {
+   text = advisor_flags_spymaster_no
+ }
+ 
+ # Diplomat
+ advisor_flags_diplomat_yes:0 "§G- Diplomat: ACTIVE§!\n"
+ advisor_flags_diplomat_no:0 "§R- Diplomat: INACTIVE§!\n"
+ advisor_flags_diplomat:0 "[Root.has_diplomat]"
+ has_diplomat:0 {
+   trigger = { has_country_flag = diplomat }
+   text = advisor_flags_diplomat_yes
+ }
+ has_diplomat:0 {
+   text = advisor_flags_diplomat_no
+ }
+ 
+ # Trader
+ advisor_flags_trader_yes:0 "§G- Trader: ACTIVE§!\n"
+ advisor_flags_trader_no:0 "§R- Trader: INACTIVE§!\n"
+ advisor_flags_trader:0 "[Root.has_trader]"
+ has_trader:0 {
+   trigger = { has_country_flag = trader }
+   text = advisor_flags_trader_yes
+ }
+ has_trader:0 {
+   text = advisor_flags_trader_no
+ }
+ 
+ # Master of Mint
+ advisor_flags_master_of_mint_yes:0 "§G- Master of Mint: ACTIVE§!\n"
+ advisor_flags_master_of_mint_no:0 "§R- Master of Mint: INACTIVE§!\n"
+ advisor_flags_master_of_mint:0 "[Root.has_master_of_mint]"
+ has_master_of_mint:0 {
+   trigger = { has_country_flag = master_of_mint }
+   text = advisor_flags_master_of_mint_yes
+ }
+ has_master_of_mint:0 {
+   text = advisor_flags_master_of_mint_no
+ }
+ 
+ # Navigator
+ advisor_flags_navigator_yes:0 "§G- Navigator: ACTIVE§!\n"
+ advisor_flags_navigator_no:0 "§R- Navigator: INACTIVE§!\n"
+ advisor_flags_navigator:0 "[Root.has_navigator]"
+ has_navigator:0 {
+   trigger = { has_country_flag = navigator }
+   text = advisor_flags_navigator_yes
+ }
+ has_navigator:0 {
+   text = advisor_flags_navigator_no
+ }
+ 
+ # Grand Captain
+ advisor_flags_grand_captain_yes:0 "§G- Grand Captain: ACTIVE§!\n"
+ advisor_flags_grand_captain_no:0 "§R- Grand Captain: INACTIVE§!\n"
+ advisor_flags_grand_captain:0 "[Root.has_grand_captain]"
+ has_grand_captain:0 {
+   trigger = { has_country_flag = grand_captain }
+   text = advisor_flags_grand_captain_yes
+ }
+ has_grand_captain:0 {
+   text = advisor_flags_grand_captain_no
+ }
+ 
+ # Army Organiser
+ advisor_flags_army_organiser_yes:0 "§G- Army Organiser: ACTIVE§!\n"
+ advisor_flags_army_organiser_no:0 "§R- Army Organiser: INACTIVE§!\n"
+ advisor_flags_army_organiser:0 "[Root.has_army_organiser]"
+ has_army_organiser:0 {
+   trigger = { has_country_flag = army_organiser }
+   text = advisor_flags_army_organiser_yes
+ }
+ has_army_organiser:0 {
+   text = advisor_flags_army_organiser_no
+ }
+ 
+ # Commandant
+ advisor_flags_commandant_yes:0 "§G- Commandant: ACTIVE§!\n"
+ advisor_flags_commandant_no:0 "§R- Commandant: INACTIVE§!\n"
+ advisor_flags_commandant:0 "[Root.has_commandant]"
+ has_commandant:0 {
+   trigger = { has_country_flag = commandant }
+   text = advisor_flags_commandant_yes
+ }
+ has_commandant:0 {
+   text = advisor_flags_commandant_no
+ }
+ 
+ # Quartermaster
+ advisor_flags_quartermaster_yes:0 "§G- Quartermaster: ACTIVE§!\n"
+ advisor_flags_quartermaster_no:0 "§R- Quartermaster: INACTIVE§!\n"
+ advisor_flags_quartermaster:0 "[Root.has_quartermaster]"
+ has_quartermaster:0 {
+   trigger = { has_country_flag = quartermaster }
+   text = advisor_flags_quartermaster_yes
+ }
+ has_quartermaster:0 {
+   text = advisor_flags_quartermaster_no
+ }
+ 
+ # Recruitmaster
+ advisor_flags_recruitmaster_yes:0 "§G- Recruitmaster: ACTIVE§!\n"
+ advisor_flags_recruitmaster_no:0 "§R- Recruitmaster: INACTIVE§!\n"
+ advisor_flags_recruitmaster:0 "[Root.has_recruitmaster]"
+ has_recruitmaster:0 {
+   trigger = { has_country_flag = recruitmaster }
+   text = advisor_flags_recruitmaster_yes
+ }
+ has_recruitmaster:0 {
+   text = advisor_flags_recruitmaster_no
+ }
+ 
+ # Fortification Expert
+ advisor_flags_fortification_expert_yes:0 "§G- Fortification Expert: ACTIVE§!\n"
+ advisor_flags_fortification_expert_no:0 "§R- Fortification Expert: INACTIVE§!\n"
+ advisor_flags_fortification_expert:0 "[Root.has_fortification_expert]"
+ has_fortification_expert:0 {
+   trigger = { has_country_flag = fortification_expert }
+   text = advisor_flags_fortification_expert_yes
+ }
+ has_fortification_expert:0 {
+   text = advisor_flags_fortification_expert_no
+ }
+ 
+ # Inquisitor
+ advisor_flags_inquisitor_yes:0 "§G- Inquisitor: ACTIVE§!\n"
+ advisor_flags_inquisitor_no:0 "§R- Inquisitor: INACTIVE§!\n"
+ advisor_flags_inquisitor:0 "[Root.has_inquisitor]"
+ has_inquisitor:0 {
+   trigger = { has_country_flag = inquisitor }
+   text = advisor_flags_inquisitor_yes
+ }
+ has_inquisitor:0 {
+   text = advisor_flags_inquisitor_no
+ }
+ 
+ # Radical Mercantilist Reforms
+ advisor_flags_radical_mercantilist_reforms_yes:0 "§G- Radical Mercantilist Reforms: ACTIVE§!\n"
+ advisor_flags_radical_mercantilist_reforms_no:0 "§R- Radical Mercantilist Reforms: INACTIVE§!\n"
+ advisor_flags_radical_mercantilist_reforms:0 "[Root.has_radical_mercantilist_reforms]"
+ has_radical_mercantilist_reforms:0 {
+   trigger = { has_country_flag = radical_mercantilist_reforms }
+   text = advisor_flags_radical_mercantilist_reforms_yes
+ }
+ has_radical_mercantilist_reforms:0 {
+   text = advisor_flags_radical_mercantilist_reforms_no
+ }
