Test 1 Custom edict for all province

--- a/3362815204/localisation/1me_text_l_english.yml
+++ b/3362815204/localisation/1me_text_l_english.yml
@@ -2,7 +2,7 @@
 great_port:0 "Great Port"
 great_port_title:0 "Great Port"
 great_port_desc:0 "The Great Port is the largest port in the world. It is the main hub for all trade in the region, and is the first stop for any merchant looking to make a profit."
-center_of_the_world:0 "Baazar"
+center_of_the_world:0 "Bazaar"
 center_of_the_world_title:0 "Bazaar"
 center_of_the_world_desc:0 "The Bazaar is the center of the world, where all trade routes converge. It is the heart of the city, and the main source of wealth for the region."
 regional_port:0 "Regional Port"
@@ -21,6 +21,16 @@ custom_institution_growth_event.1.c:0 "I'm a chad, I will develop the institutio
 institution_growth_boost_modifier:0 "Intitution growth boost"
 institution_growth_boost_modifier2:0 "Intitution growth boost 2"
 
+select_edict_for_all_province_title:0 "Select Edict for All Provinces"
+select_edict_for_all_province_desc:0 "This decision will allow you to select an edict to be applied to all provinces in your country."
+custom_edict_for_all_province_event.1.t:0 "Enact a country Edict."
+custom_edict_for_all_province_event.1.d:0 "Select an edict to be applied to all provinces in your country."
+custom_edict_for_all_province_event.1.a:0 "We are to much dumb in this country, +33% institution spread."
+custom_edict_for_all_province_event.1.b:0 "My country is a shithole, -0.03 monthly local autonomy."
+custom_edict_for_all_province_event.1.c:0 "Panik button, +33% local defensiveness."
+custom_edict_for_all_province_event.1.d:0 "Time to dev babyyy, -10% local development cost."
+custom_edict_for_all_province_event.1.e:0 "WTO hate you for this, +50% province trade power."
+custom_edict_for_all_province_event.1.f:0 "St barthelemy V2, +1% local missionary strength."
 
 advisor_flags_info_title:0 "Advisor Events Status"
 advisor_flags_info_desc:0 "This option displays which advisor events have been triggered in your country."
