--- a/3362815204/localisation/1me_text_l_english.yml
+++ b/3362815204/localisation/1me_text_l_english.yml
@@ -22,16 +22,16 @@ institution_growth_boost_modifier:0 "Intitution growth boost"
 institution_growth_boost_modifier2:0 "Intitution growth boost 2"
 
 select_edict_for_all_province_title:0 "Select Edict for All Provinces"
-select_edict_for_all_province_desc:0 "This decision will allow you to select an edict to be applied to all provinces in your country."
+select_edict_for_all_province_desc:0 "This decision will allow you to select an edict to be applied to all provinces in your country. Nothing is more efficient than enacting a decree to bypass the congress."
 custom_edict_for_all_province_event.1.t:0 "Enact a country Edict."
 custom_edict_for_all_province_event.1.d:0 "Select an edict to be applied to all provinces in your country."
 custom_edict_for_all_province_event.1.a:0 "We are to much dumb in this country, §G- +33% institution spread§!."
 custom_edict_for_all_province_event.1.b:0 "My country is a shithole, §G- -0.03 monthly local autonomy§!."
 custom_edict_for_all_province_event.1.c:0 "Panik button, §G- +33% local defensiveness§!."
-custom_edict_for_all_province_event.1.e:0 "Time to dev babyyy, §G- -10% local development cost§!."
+custom_edict_for_all_province_event.1.e:0 "Drill baby drill, §G- -10% local development cost§!."
 custom_edict_for_all_province_event.1.f:0 "WTO hate you for this, §G- +50% province trade power§!."
 custom_edict_for_all_province_event.1.g:0 "St barthelemy V2, §G- +1% local missionary strength§!."
-custom_edict_for_all_province_event.1.h:0 "Noting we are good with it, §G- No state edict§!."
+custom_edict_for_all_province_event.1.h:0 "A FUERA !, §G- Clear all state edict§!."
 custom_edict_for_all_province_event.1.i:0 "Nothing really... §G- Getting out of the menu§!."
 
 advisor_flags_info_title:0 "Advisor Events Status"
