--- a/3362815204/localisation/1me_text_l_english.yml
+++ b/3362815204/localisation/1me_text_l_english.yml
@@ -25,14 +25,27 @@ select_edict_for_all_province_title:0 "Select Edict for All Provinces"
 select_edict_for_all_province_desc:0 "This decision will allow you to select an edict to be applied to all provinces in your country. Nothing is more efficient than enacting a decree to bypass the congress."
 custom_edict_for_all_province_event.1.t:0 "Enact a country Edict."
 custom_edict_for_all_province_event.1.d:0 "Select an edict to be applied to all provinces in your country."
-custom_edict_for_all_province_event.1.a:0 "We are to much dumb in this country, §G- +33% institution spread§!."
-custom_edict_for_all_province_event.1.b:0 "My country is a shithole, §G- -0.03 monthly local autonomy§!."
-custom_edict_for_all_province_event.1.c:0 "Panik button, §G- +33% local defensiveness§!."
-custom_edict_for_all_province_event.1.e:0 "Drill baby drill, §G- -10% local development cost§!."
-custom_edict_for_all_province_event.1.f:0 "WTO hate you for this, §G- +50% province trade power§!."
-custom_edict_for_all_province_event.1.g:0 "St barthelemy V2, §G- +1% local missionary strength§!."
-custom_edict_for_all_province_event.1.h:0 "A FUERA !, §G- Clear all state edict§!."
-custom_edict_for_all_province_event.1.i:0 "Nothing really... §G- Getting out of the menu§!."
+custom_edict_for_all_province_event.1.b:0 "A FUERA !, §G- Clear all state edict§!."
+custom_edict_for_all_province_event.1.a:0 "Nothing really... §G- Getting out of the menu§!."
+custom_edict_for_all_province_event.1.c:0 "We are to much dumb in this country, §G- +33% institution spread§!."
+custom_edict_for_all_province_event.1.e:0 "My country is a shithole, §G- -0.03 monthly local autonomy§!."
+custom_edict_for_all_province_event.1.f:0 "Panik button, §G- +33% local defensiveness§!."
+custom_edict_for_all_province_event.1.g:0 "Drill baby drill, §G- -10% local development cost§!."
+custom_edict_for_all_province_event.1.h:0 "250% Tarrifs for china, §G- +50% province trade power§!."
+custom_edict_for_all_province_event.1.i:0 "St barthelemy V2, §G- +1% local missionary strength§!."
+custom_edict_for_all_province_event.1.j:0 "Lower the recruitment age to 12, §G- +25% Local Manpower§!."
+custom_edict_for_all_province_event.1.k:0 "Tax the shit out of them, §G- +25% Local Tax Modifier§!."
+custom_edict_for_all_province_event.1.l:0 "Religious tolerance, §G- missing localization§!."
+custom_edict_for_all_province_event.1.m:0 "State integration, §G- missing localization§!."
+custom_edict_for_all_province_event.1.n:0 "We must relocalize our factories, §G- +10% local good produced§!."
+
+monkey_devclick_title:0 "MONKEY DEVCLICK"
+monkey_devclick_desc:0 "How much of doom click you have placed for dev, hover on top of the question mark"
+monkey_devclick_tooltip:0 "Manual Development:\n\n§W£adm£ Development Gained: §G[This.dev_adm_clicks.GetValue] \n§W£dip£ Development Gained: §G[This.dev_dip_clicks.GetValue] \n§W£mil£ Development Gained: §G[This.dev_mil_clicks.GetValue] \n\n§WTotal Development Gained: §Y[This.dev_sum_clicks.GetValue]"
+
+parliament_all_provinces_title:0 "£dip£ I love democracy !"
+parliament_all_provinces_desc:0 "Add parliment to every province"
+parliament_all_provinces_tooltip:0 "Add parliment to every province"
 
 advisor_flags_info_title:0 "Advisor Events Status"
 advisor_flags_info_desc:0 "This option displays which advisor events have been triggered in your country."
