--- a/3362815204/localisation/1me_text_l_french.yml
+++ b/3362815204/localisation/1me_text_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 great_port:0 "Grand Port"
 great_port_title:0 "Grand Port"
 great_port_desc:0 "Le Grand Port est le plus grand port du monde. Il est le principal hub pour tout le commerce de la région, et est la première étape pour tout marchand cherchant à faire un profit."
