--- a/3362815204/localisation/ACE_bookmarks_l_french.yml
+++ b/3362815204/localisation/ACE_bookmarks_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 ACE_CANNOR_NAME: "£bookmark_ACE_cannor£"
 ACE_CANNOR_DESC: "Cannor                                                                                                £icon_new_player£ §GRecommandé pour les joueurs nouveaux dans l'univers.§! \n\n£bookmark_race_human££bookmark_race_elven££bookmark_race_halfling££bookmark_race_dwarven££bookmark_race_gnomish££bookmark_race_kobold££bookmark_race_troll££bookmark_race_gnollish£\n    £bookmark_separator£\nRègne en tant que Grand Duc de @A30 Wex\nApporte l'ordre au Nord en tant que @Z88 Vængheim. Pille à travers le monde en tant que @A05 Reveria révisée\nDomine le commerce de Divenhal et championne la foi Adeanique en tant que @A11 Pearlsedge. Restaure la gloire de Tretunic en tant que @Z05 Tretun.\nPille Cannor en tant que @AC7 Kryzzar. Apporte l'ordre en tant que dictature de @A92 Leslinpár"
