--- a/3362815204/localisation/ACE_religions_l_french.yml
+++ b/3362815204/localisation/ACE_religions_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 skaldhyrric_faith: "Foi Skaldhyrrique"
 skaldhyrric_faith_religion_desc: "Fondée pendant le Réveil du Dragon, la Foi Skaldhyrrique est la religion dominante de Gerudia. Ils croient que réciter des contes magiques maintient Elkaesal le Blanc, le dragon qui a plongé Gerudia dans un hiver éternel, endormi et à distance."
