--- a/3362815204/localisation/aelantir_nativebuyout_l_french.yml
+++ b/3362815204/localisation/aelantir_nativebuyout_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 nativebuyout.1.t:0 "Acquisition de Nouvelle Terre"
 nativebuyout.1.desc1:0 "Le voyage est terminé, et nous sommes enfin arrivés à Aelantir ! Notre camp temporaire deviendra bientôt une ville, et son nom sera [Root.Capital.GetName].\n\nCela dit, nos éclaireurs ont trouvé un endroit encore meilleur pour construire une capitale à quelques kilomètres d'ici. Et ils sont convaincus de pouvoir convaincre les autochtones locaux de nous vendre leur terre !"
