--- a/3362815204/localisation/anb_CliffsOfRuin_l_french.yml
+++ b/3362815204/localisation/anb_CliffsOfRuin_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 construct_cliff_passage_1_title:0 "Passage des Falaises de Ruine ([2095.GetName] - [1876.GetName])"
 construct_cliff_passage_1_desc:0 "Le énorme cratère au milieu d'Aelantir constitue une barrière naturelle redoutable. Son bord, connu sous le nom de Falaises de Ruine, ne peut être escaladé que par des sentiers naturels périlleux, ou avec l'aide de systèmes de poulies dont la construction nécessite des jours. Aucune de ces solutions n'est pratique pour le commerce constant ou pour le passage des armées. En regroupant suffisamment de ressources, nous pourrons construire un passage qui facilitera grandement les déplacements de haut en bas des falaises, et nous en serons les seuls maîtres."
