--- a/3362815204/localisation/anb_aakhetist_l_french.yml
+++ b/3362815204/localisation/anb_aakhetist_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 aakhet_approval:0 "§YApprobation d'Aakhet§!"
 aakhetist_current_approval_tooltip:0 "§YL'approbation actuelle d'Aakhet§! pour nous est §Y[Root.aakhet_approval.GetValue]/100§!"
