--- a/3362815204/localisation/anb_adventurers_estate_events_l_french.yml
+++ b/3362815204/localisation/anb_adventurers_estate_events_l_french.yml
@@ -1,4 +1,4 @@
-Voici la traduction en français des textes entre guillemets, en ignorant les noms propres :
+﻿Voici la traduction en français des textes entre guillemets, en ignorant les noms propres :
 
 l_french:
 
