--- a/3362815204/localisation/anb_adventurers_l_french.yml
+++ b/3362815204/localisation/anb_adventurers_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 building_warcamp:0 "£adventurer_icon_s£Camp de Guerre"
 building_guild_hall:0 "£adventurer_icon_s£Salle de Guilde"
