--- a/3362815204/localisation/anb_adventurers_wanted_l_french.yml
+++ b/3362815204/localisation/anb_adventurers_wanted_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 aw_has_adventurer_generous_rewards:0 "Vous avez le privilège §YRécompenses Généreuses de Quête§! actif, ce qui augmentera les chances de succès des aventuriers.\nL'influence £estate_influence£ et la loyauté £estate_loyalty£ de l'État $ESTATE_ADVENTURERS$ affecteront également cela."
 
