--- a/3362815204/localisation/anb_aelantirspawnables_l_french.yml
+++ b/3362815204/localisation/anb_aelantirspawnables_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 aelantirspawnables.1.a:0 "Un autre concurrent à Aelantir."
 aelantirspawnables.1.b:0 "£event_button_spawnable£"
