--- a/3362815204/localisation/anb_age_of_greentide_l_french.yml
+++ b/3362815204/localisation/anb_age_of_greentide_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 opinion_fought_alongside_corin:0 "A combattu aux côtés de Corin"
 greentide_adventurer_boost:0 "Vainqueurs de la Marée Verte"
