--- a/3362815204/localisation/anb_age_of_unraveling_l_french.yml
+++ b/3362815204/localisation/anb_age_of_unraveling_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 unraveling.0.t:0 "Redécouverte d'Aelantir"
 unraveling.0.d:0 "La première confirmation de l'existence d'Aelantir a été le jour de sa mort. Le Jour des Cieux Cendrés a peut-être déchiré Aelantir, mais depuis que la Flotte des Vestiges elfiques est arrivée à Cannor pendant l'Année 1000, les récits de leur patrie légendaire ont captivé les idéalistes et les explorateurs du monde entier. Depuis, beaucoup ont tenté de naviguer vers l'ouest et ont échoué... jusqu'à maintenant.\n\nAelantir a été redécouvert."
