--- a/3362815204/localisation/anb_ages_l_french.yml
+++ b/3362815204/localisation/anb_ages_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 obj_purge_warband:0 "Purger les Intrus"
 obj_purge_warband_desc:0 "Utiliser la décision de Purger la Bande de Guerre sur une autre nation dans la Serpentspine"
