--- a/3362815204/localisation/anb_artificer_estate_events_l_french.yml
+++ b/3362815204/localisation/anb_artificer_estate_events_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 artificers_estate_events.1.t:0 "Avancement des Classes des Artificiers"
 artificers_estate_events.1.d:0 "Le statut des $ESTATE_ARTIFICERS$ ne repose pas sur les mêmes vieilles traditions que celui des états traditionnels. Au lieu de cela, ils ont dû se forger leur propre fortune en travaillant diligemment et en trouvant diverses façons d'améliorer la production. Cependant, cela leur a très bien réussi récemment. Bien que moins prestigieux, le commerce est en de nombreuses façons le pilier de notre économie, et grâce à leur contrôle sur les moyens de production, les $ESTATE_ARTIFICERS$ ont réussi à augmenter leur pouvoir sur notre pays."
