--- a/3362815204/localisation/anb_bookmarks_l_french.yml
+++ b/3362815204/localisation/anb_bookmarks_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 CANNOR_NAME:0 "£bookmark_cannor£"
 CANNOR_DESC:0 "Cannor                                                                                                £icon_new_player£ §GRecommandé pour les joueurs qui sont nouveaux dans cet univers.§! \n\n£bookmark_race_human££bookmark_race_elven££bookmark_race_halfling££bookmark_race_dwarven££bookmark_race_gnomish££bookmark_race_kobold££bookmark_race_troll££bookmark_race_gnollish£\n    £bookmark_separator£\nUne année s'est écoulée depuis la fin des Guerres de Lilas, une guerre dynastique de succession entre le Grand-Duché impérial de Dameria et son voisin, le Royaume de Lorent. Lorent se tient fatigué mais victorieux, grâce à la trahison de leurs ennemis Dameriens par leurs alliés impériaux comme le Grand Duc de Wex, qui occupe maintenant le trône impérial. L'équilibre des pouvoirs est rompu et de nouveaux défis vont surgir, mais le rêve d'Anbennar (unité) sera-t-il enfin réalisé ou Cannor sombrera-t-il à nouveau dans le chaos ?"
