--- a/3362815204/localisation/anb_bulgu_orazan_events_l_french.yml
+++ b/3362815204/localisation/anb_bulgu_orazan_events_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 bulgu_orazan.1.t:0 "Chants de Bramash"
 bulgu_orazan.1.d:0 "Bramash Œil Nuageux a atteint un statut légendaire après avoir conduit les orcs asservis d'Ozgarom d'Endralliande aux jungles de Soruin, sur des bateaux pris à leurs oppresseurs, pour poursuivre une vie de liberté. Il est considéré comme le père fondateur d'Ozgarom et a même atteint la déification dans certains foyers, en tant que Bramash le Libérateur. Ses Chants inspirent le courage chez de nombreux orcs dans le nouveau monde, qui luttent encore contre l'esclavage, la servitude sous contrat, le racisme et le colonialisme."
