--- a/3362815204/localisation/anb_countries_l_french.yml
+++ b/3362815204/localisation/anb_countries_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 #Ces noms ci n'ont pas été traduits car ce sont tous des noms propres
 #Merci de rapporter les noms qui devraient avoir une traduction spécifique
  A01:0 "Lorent"
