--- a/3362815204/localisation/anb_custom_tooltips_l_french.yml
+++ b/3362815204/localisation/anb_custom_tooltips_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 ct_lilac_wars.1:0 "Gagnez §G+40§! d'opinion avec les membres du §YParti de la Lune§! et §R-40§! d'opinion avec les membres du §YParti de la Rose§! pendant §Y20 ans§! et subissez §R-50§! de raisons d'être élu empereur."
 ct_lilac_wars.2:0 "Gagnez §G+20§! de bonus d'opinion avec les membres du §YParti de la Rose§! et §R-40§! d'opinion avec les membres du §YParti de la Lune§! pendant §Y20 ans§!."
