--- a/3362815204/localisation/anb_damestear_l_french.yml
+++ b/3362815204/localisation/anb_damestear_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 damestear:0 "Damestear"
 damestearDESC:0 "Connu sous de nombreux noms à travers Halann, le damestear se trouve dans des dépôts météoritiques qui tombent généralement sur le monde au dixième mois, Tearfall. On dit qu'il est fait de magie brute elle-même, le damestear est le sang vital de la pratique magique, il renforce les sorts et leurs lanceurs, et améliore les armes et les armures. \n\nAu cours des siècles suivants, le damestear soutiendra les merveilles technologiques de l'artificerie. Férocement convoité, sa rareté est souvent aussi centrale dans le conflit des Mages et des Artificiers que la lutte entre l'ancien pouvoir et le nouveau."
