--- a/3362815204/localisation/anb_decisions_l_french.yml
+++ b/3362815204/localisation/anb_decisions_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 countytoduchy_independent_decision_title:0 "Devenir un Duché"
 countytoduchy_independent_decision_desc:0 "Nous sommes devenus trop grands et trop puissants pour rester un Comte, nous avons besoin d'un titre plus digne de notre pouvoir."
