--- a/3362815204/localisation/anb_deepwoods_l_french.yml
+++ b/3362815204/localisation/anb_deepwoods_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
 prosperous_capital_tooltip:0 "§TLa capitale doit être prospère§!"
 cyranvar_isolationist_path_tooltip:0 "Nous devons adopter une politique isolationniste."
