--- a/3362815204/localisation/anb_devandi_l_french.yml
+++ b/3362815204/localisation/anb_devandi_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  #Events
  devandi.1.t: "Âme Unificatrice de Nahrei"
  devandi.1.d: "La dernière cérémonie des semaines du festival de l'Âme Unificatrice de Nahrei est arrivée juste à temps, car les [Root.GetAdjective] ont commencé à devenir agités. Ils ont passé le mois dernier en méditation profonde et en introspection sur la nature du monde et leur place dans celui-ci. La cérémonie commence et se termine par le Flyransh, ou « Danse des Fleurs », dans laquelle les [Root.GetAdjective] dansent autour d'un poteau couronné de fleurs, chaque danseur s'approchant individuellement du poteau central pour prier les âmes. Mais la véritable bénédiction du festival n'est visible qu'à la fin du dernier Flyransh. Ensuite, il y a une sensation d'énergie dans l'air, car chaque [Root.GetAdjective] est impatient d'appliquer leurs apprentissages au monde."
