--- a/3362815204/localisation/anb_diggy_diggy_hole_dungeon_l_french.yml
+++ b/3362815204/localisation/anb_diggy_diggy_hole_dungeon_l_french.yml
@@ -1,4 +1,4 @@
-dwarovar_dungeon_can_use_tooltip: "§YPropriétaire§! est une §Yculture§! native de §YSerpentspine§!"
+﻿dwarovar_dungeon_can_use_tooltip: "§YPropriétaire§! est une §Yculture§! native de §YSerpentspine§!"
 dd_upgrade_dungeon_tooltip: "Nous devons explorer complètement le prochain niveau avant de commencer les travaux de rénovation."
 dungeon_floor_builded_tooltip: "N'a pas de §YNiveau de Donjon Exploré§! pas encore rénové"
 has_explorable_dungeon_tooltip: "Possède un §YDonjon Explorable§!"
