--- a/3362815204/localisation/anb_escanni_refugees_l_french.yml
+++ b/3362815204/localisation/anb_escanni_refugees_l_french.yml
@@ -1,4 +1,4 @@
-Voici la traduction des textes entre guillemets en français :
+﻿Voici la traduction des textes entre guillemets en français :
 
 l_french:
 
