Update event MJ Religion RP

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -1,32 +1,40 @@
 ﻿l_english:
  glp_save_edit_events.EVTNAME1:0 "Change [From.Owner.GetName]'s religion"
  glp_save_edit_events.EVTDESC1:0 "Decide a religion for the nation of [From.Owner.GetName]."
- glp_save_edit_events.EVTOPTZ1:0 "Nevermind"
- glp_save_edit_events.EVTOPTAA1:0 "Inquisition"
- glp_save_edit_events.EVTOPTA1:0 "Catholic"
- glp_save_edit_events.EVTOPTB1:0 "Anglican"
- glp_save_edit_events.EVTOPTC1:0 "Hussite"
- glp_save_edit_events.EVTOPTD1:0 "Protestant"
- glp_save_edit_events.EVTOPTE1:0 "Reformed"
- glp_save_edit_events.EVTOPTF1:0 "Orthodox"
- glp_save_edit_events.EVTOPTG1:0 "Coptic"
- glp_save_edit_events.EVTOPTH1:0 "Sunni"
- glp_save_edit_events.EVTOPTI1:0 "Shiite"
- glp_save_edit_events.EVTOPTJ1:0 "Ibadi"
- glp_save_edit_events.EVTOPTK1:0 "Theravada"
- glp_save_edit_events.EVTOPTL1:0 "Vajrayana"
- glp_save_edit_events.EVTOPTM1:0 "Mahayana"
- glp_save_edit_events.EVTOPTN1:0 "Confucianism"
- glp_save_edit_events.EVTOPTO1:0 "Shinto"
- glp_save_edit_events.EVTOPTP1:0 "Hinduism"
- glp_save_edit_events.EVTOPTQ1:0 "Sikhism"
- glp_save_edit_events.EVTOPTR1:0 "Animism"
- glp_save_edit_events.EVTOPTS1:0 "Fetishist"
- glp_save_edit_events.EVTOPTT1:0 "Totemism"
- glp_save_edit_events.EVTOPTU1:0 "Norse"
- glp_save_edit_events.EVTOPTW1:0 "Tengri"
- glp_save_edit_events.EVTOPTX1:0 "Jewish"
- glp_save_edit_events.EVTOPTY1:0 "Zoroastrian"
+ glp_save_edit_events.EVTRELIGIONZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTRELIGIONA01:0 "Regent court"
+ glp_save_edit_events.EVTRELIGIONA02:0 "Corinite"
+ glp_save_edit_events.EVTRELIGIONA03:0 "Ravelian"
+ glp_save_edit_events.EVTRELIGIONA04:0 "Dalcabba"
+ glp_save_edit_events.EVTRELIGIONA05:0 "Infernal Court"
+ glp_save_edit_events.EVTRELIGIONA06:0 "The thought"
+ glp_save_edit_events.EVTRELIGIONA07:0 "Black doctrine"
+ glp_save_edit_events.EVTRELIGIONA08:0 "Elikhet"
+ glp_save_edit_events.EVTRELIGIONA09:0 "Nirakhet"
+ glp_save_edit_events.EVTRELIGIONA10:0 "Aakhet"
+ glp_save_edit_events.EVTRELIGIONA11:0 "Xhazobkult"
+ glp_save_edit_events.EVTRELIGIONA12:0 "Ancestor Worship"
+ glp_save_edit_events.EVTRELIGIONA13:0 "Dwarven Pantheon"
+ glp_save_edit_events.EVTRELIGIONA14:0 "Runefather Worship"
+ glp_save_edit_events.EVTRELIGIONA15:0 "Elven forebearers"
+ glp_save_edit_events.EVTRELIGIONA16:0 "Soise Vo"
+ glp_save_edit_events.EVTRELIGIONA17:0 "Nur Dahvaraesa"
+ glp_save_edit_events.EVTRELIGIONA18:0 "New Sun Cult"
+ glp_save_edit_events.EVTRELIGIONA19:0 "Old sun cult"
+ glp_save_edit_events.EVTRELIGIONA20:0 "Jadd"
+ glp_save_edit_events.EVTRELIGIONA21:0 "Skaldhyrric Faith"
+ glp_save_edit_events.EVTRELIGIONA22:0 "Great Dookan"
+ glp_save_edit_events.EVTRELIGIONA23:0 "Old Dookan"
+ glp_save_edit_events.EVTRELIGIONA24:0 "Kobold Dragon Cult"
+ glp_save_edit_events.EVTRELIGIONA25:0 "Goblinic Shamanism"
+ glp_save_edit_events.EVTRELIGIONA26:0 "The Hunt"
+ glp_save_edit_events.EVTRELIGIONA27:0 "Fey court"
+ glp_save_edit_events.EVTRELIGIONA28:0 "Eordellon"
+ glp_save_edit_events.EVTRELIGIONA29:0 "High Phylosophy"
+ glp_save_edit_events.EVTRELIGIONA30:0 "Suhans Sraxis"
+ glp_save_edit_events.EVTRELIGIONA31:0 "Accretive Path"
+ glp_save_edit_events.EVTRELIGIONA32:0 "Transmutative Path"
+ glp_save_edit_events.EVTRELIGIONA33:0 "Mystic Accord"
  glp_save_edit_events.EVTNAME2:0 "Changed Religion"
  glp_save_edit_events.EVTDESC2:0 "My Lord! By the decree of the Vampiric Conclave, our [Root.GovernmentName] has converted to [Root.Religion.GetName]!"
  glp_save_edit_events.EVTOPTA2:0 "Interesting..."
