Fix vision countries, admin countries, admin panel fix

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
  glp_save_edit_events.EVTNAME1:0 "Change [From.Owner.GetName]'s religion"
  glp_save_edit_events.EVTDESC1:0 "Decide a religion for the nation of [From.Owner.GetName]."
  glp_save_edit_events.EVTRELIGIONZZ1:0 "Nevermind"
@@ -508,3 +508,26 @@
  glp_save_edit_events.EVTOPTH71:0 "Build/Upgrade Manpower Building"
  glp_save_edit_events.EVTOPTI71:0 "Build/Upgrade FL Building"
  glp_save_edit_events.EVTOPTJ71:0 "Nevermind"
+
+
+ #########ADMIN tag and ideas############
+
+A1A:0 "MJ"
+A2A:0 "CoMJ"
+ADMIN_ideas:0 "Admin Ideas"
+ ADMIN_ideas_start:0 "Admin Traditions"
+ ADMIN_ideas_bonus:0 "Admin Ambition"
+ ADMIN_1:0 "The floor is lava"
+ ADMIN_1_desc:0 ""
+ ADMIN_2:0 "Cenarium walls"
+ ADMIN_2_desc:0 ""
+ ADMIN_3:0 "Toyota Motors"
+ ADMIN_3_desc:0 ""
+ ADMIN_4:0 "Barad-dûr"
+ ADMIN_4_desc:0 ""
+ ADMIN_5:0 "One man country"
+ ADMIN_5_desc:0 ""
+ ADMIN_6:0 "Paper boats"
+ ADMIN_6_desc:0 ""
+ ADMIN_7:0 "Dolls army"
+ ADMIN_7_desc:0 ""
